samples/_failures_safe/1761521106_288320_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_396604fd.c: In function ‘tokenize’:
./samples/SAFE/__tmp_396604fd.c:160:13: error: expected declaration or statement at end of input
  160 |             column += len;
      |             ^~~~~~
./samples/SAFE/__tmp_396604fd.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_396604fd.c:160:13: error: expected declaration or statement at end of input
